<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/laymid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

       <ImageView
           android:id="@+id/logo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/logo03"
           tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etUid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uid" />

        <EditText
            android:id="@+id/etUpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/upwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn07"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
         <Button
            android:id="@+id/btnResign"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
             android:background="@drawable/btn01"
            android:text="@string/resign"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>